--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,18 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
-  }
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "@Components/*": ["src/Components/*"],
+      "@Navigation/*": ["src/Navigation/*"],
+      "@Screens/*": ["src/Screens/*"],
+      "@Assets/*": ["src/Assets/*"],
+      "@Theme/*": ["src/Theme/*"],
+      "@Hooks/*": ["src/Hooks/*"],
+      "@BookMyShow/*": ["src/*"],
+    }
+  },
+  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"],
+  "exclude": ["./node_modules/**/*"]
 }
