--- a/package.json
+++ b/package.json
@@ -10,18 +10,30 @@
     "ts:check": "tsc"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
+    "expo-font": "~11.4.0",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-linking": "^6.0.0",
+    "expo-router": "^2.0.14",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "^0.73.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-paper": "^5.11.4",
+    "react-native-reanimated": "^3.3.0",
+    "react-native-safe-area-context": "^4.8.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "@types/react-native": "^0.72.8",
+    "babel-plugin-module-resolver": "^5.0.0",
     "typescript": "^5.1.3"
   },
   "private": true
