--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,15 +4,8 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "@Components/*": ["src/Components/*"],
-      "@Navigation/*": ["src/Navigation/*"],
-      "@Screens/*": ["src/Screens/*"],
-      "@Assets/*": ["src/Assets/*"],
-      "@Theme/*": ["src/Theme/*"],
-      "@Hooks/*": ["src/Hooks/*"],
-      "@BookMyShow/*": ["src/*"],
+      "@/*": ["./src/*"]
     }
   },
   "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"],
-  "exclude": ["./node_modules/**/*"]
 }
